# think-aloud2

./: .gitignore  circ_probes.csv  circ_rows.csv  circ_subrows.csv  circuitousness.R  compute_indices.ipynb  data_stream_text_time_clean.csv  embed.py  mvee.py  probe_as_embedding_transitions.R  pyproject.toml  readme.md  row_as_embedding_transitions.R  row_as_embedding_transitions.csv  text_probes.csv  volume_probes.csv  volume_subrows.csv
data/: circ_probes.csv  circ_rows.csv  circ_subrows.csv  data_stream_text_time.csv  info_participants.csv  probe_as_embedding_transitions.csv  row_as_embedding_transitions.csv  subrow_as_embedding_transitions.csv  text_rows.csv  text_subrows.csv  volume_probes.csv  volume_rows.csv  volume_subrows.csv
notebooks/: compute_indices.ipynb
notebooks/stats/: circuitousness.ipynb  probe_transitions.ipynb  row_transitions.ipynb  subrow_transitions.ipynb  volume.ipynb
stats/: subrow_as_embedding_transitions.R  volume.R
tests/: test_indices.py
think_aloud/: compute_indexes.py  compute_indices.py  preprocess.py
