[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "think_aloud"
version = "0.0.1"
authors = [
  { name="Solano Felicio", email="solano.felicio@protonmail.com" },
]
description = "'Think aloud' experience"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["think_aloud"]